izzy : 마이페이지 팔로우 버튼 색상 변경

--- a/src/styles/MyPage.scss
+++ b/src/styles/MyPage.scss
@@ -402,7 +402,7 @@
 
       &.follow{
         background-color: #cf0;
-        color: #fff;
+        color: #1a1a1a;
       }
       &.unfollow{
         background-color: transparent;
