izzy : 투표 이벤트 아티스트 이미지 비율 깨짐 해결

--- a/src/styles/VoteEvent.scss
+++ b/src/styles/VoteEvent.scss
@@ -315,6 +315,7 @@
               object-fit: cover;
               overflow: hidden;
               display: block;
+              aspect-ratio: 1 / 1;
             }
             .rank-artist-name {
               width: 100%;
