--- a/src/styles/MyPage.scss
+++ b/src/styles/MyPage.scss
@@ -25,16 +25,16 @@
       gap: 12px;
     }
 
-    .profile__info__cover{
+    .profile__info__cover {
       display: flex;
       flex-direction: column;
       row-gap: clamp(12px, 1.3vw, 20px);
-      .profile__info__btns{
+      .profile__info__btns {
         display: flex;
         align-items: center;
         gap: 16px;
-        a{
-          &.key-pass{
+        a {
+          &.key-pass {
             border-radius: 8px;
             background: #262626;
             border: 1px solid #262626;
@@ -44,19 +44,18 @@
             pointer-events: none;
           }
           border-radius: 8px;
-          border: 1px solid #CF0;
+          border: 1px solid #cf0;
           height: 30px;
           padding: 0 16px;
           display: flex;
           align-items: center;
           justify-content: center;
-          color: #CF0;
+          color: #cf0;
           font-weight: 700;
           font-size: clamp(12px, 0.9vw, 14px);
-        }//edit-btn--END--
-      }//profile__info__btns--END--
-
-    }//profile__info__cover--END--
+        } //edit-btn--END--
+      } //profile__info__btns--END--
+    } //profile__info__cover--END--
     .profile__info--name-level {
       display: flex;
       gap: clamp(9px, 0.8vw, 12px);
@@ -72,12 +71,12 @@
       border-radius: 100%;
       aspect-ratio: 1 / 1;
     }
-    .profile__info--profile-top{
+    .profile__info--profile-top {
       display: flex;
       flex-direction: column;
       width: 100%;
     }
-    .profile__info--profile--name{
+    .profile__info--profile--name {
       display: flex;
       column-gap: 10px;
       align-items: center;
@@ -93,7 +92,7 @@
       font-weight: 400;
       word-break: break-all;
       max-width: 75%;
-      
+
       font {
         font-family: inherit !important;
         font-size: inherit !important;
@@ -104,19 +103,19 @@
         letter-spacing: inherit !important;
       }
     }
-    .profile__info--count{
+    .profile__info--count {
       display: flex;
       column-gap: clamp(12px, 1.3vw, 20px);
       align-items: center;
       margin-bottom: 12px;
-      .profile__info--img-count{
-        span{
+      .profile__info--img-count {
+        span {
           padding-left: 22px;
           position: relative;
           font-size: clamp(12px, 0.9vw, 14px);
           line-height: clamp(18px, 1.3vw, 22px);
         }
-        span::before{
+        span::before {
           position: absolute;
           content: '';
           width: 20px;
@@ -127,14 +126,14 @@
           left: 0;
           top: -2px;
         }
-        .total-like-count{
+        .total-like-count {
           margin-left: 8px;
         }
-        .total-play-count::before{
+        .total-play-count::before {
           background-image: url('../assets/images/vote/music-play-icon.svg');
         }
-        .total-like-count::before{
-          background-image: url('../assets/images/vote/music-heart-icon.svg')
+        .total-like-count::before {
+          background-image: url('../assets/images/vote/music-heart-icon.svg');
         }
       }
     }
@@ -186,8 +185,8 @@
       align-items: center;
       font-size: clamp(12px, 0.9vw, 14px);
     }
-    .profile__record--modal-btn{
-      img{
+    .profile__record--modal-btn {
+      img {
         width: 100%;
         max-width: clamp(20px, 1.6vw, 24px);
       }
@@ -256,10 +255,10 @@
       }
     }
     .profile__link--count {
-      color: #CF0;
+      color: #cf0;
       font-weight: 700;
       font-size: clamp(12px, 0.9vw, 14px);
-      span{
+      span {
         color: #767676;
         font-weight: 400;
       }
@@ -321,20 +320,20 @@
         letter-spacing: inherit !important;
       }
 
-      .profile__desc--button__arrow{
+      .profile__desc--button__arrow {
         transition: transform 0.4s ease;
         width: 100%;
         max-width: 20px;
       }
-      .profile__desc--button__arrow.up{
-         transform: rotate(180deg);
+      .profile__desc--button__arrow.up {
+        transform: rotate(180deg);
       }
     }
-    .tw-connect-wallet{
+    .tw-connect-wallet {
       width: 100%;
       height: 40px;
     }
-    .tw-connect-wallet{
+    .tw-connect-wallet {
       display: flex;
       align-items: center;
       justify-content: center;
@@ -392,7 +391,7 @@
         }
       }
     }
-    .mypage__follow-btn{
+    .mypage__follow-btn {
       padding: 4px clamp(12px, 1.1vw, 16px);
       font-size: clamp(12px, 0.9vw, 14px);
       flex-shrink: 0;
@@ -400,11 +399,11 @@
       border: 1px solid transparent;
       border-radius: 8px;
 
-      &.follow{
+      &.follow {
         background-color: #cf0;
-        color: #fff;
+        color: #1c1c1c;
       }
-      &.unfollow{
+      &.unfollow {
         background-color: transparent;
         border-color: #cf0;
         color: #cf0;
@@ -698,7 +697,7 @@
     .mypage__profile {
       width: 100%;
       // height: 580px;
-      .profile__info__btns{
+      .profile__info__btns {
         margin-bottom: 8px;
       }
       .mypage__profile-bg {
@@ -746,21 +745,20 @@
 }
 
 @media screen and (max-width: 1000px) {
-  .mypage{
-    .mypage__profile{
-      .profile__info--name-level{
+  .mypage {
+    .mypage__profile {
+      .profile__info--name-level {
         position: relative;
         padding-bottom: 30px;
       }
-      .profile__info--count{
+      .profile__info--count {
         margin-bottom: 0;
       }
-      .profile__record{
+      .profile__record {
         position: absolute;
         bottom: 0;
         left: 0;
       }
     }
-
   }
 }
